TESTS_PKG_CONFIG = $(top_builddir)/pkg-config$(EXEEXT)
TESTS_ENVIRONMENT = PKG_CONFIG='$(TESTS_PKG_CONFIG)' $(TESTS_SHELL)

TESTS = \
	check-cflags \
	check-libs \
	check-mixed-flags \
	check-non-l-flags \
	check-define-variable \
	check-libs-private \
	check-requires-private \
	check-circular-requires \
	check-includedir \
	check-conflicts \
	check-missing \
	check-idirafter \
	check-sort-order \
	check-duplicate-flags \
	check-whitespace \
	check-cmd-options \
	check-version \
	check-requires-version \
	check-print-options \
	check-path \
	check-sysroot \
	check-uninstalled \
	check-debug \
	check-gtk \
	check-tilde

EXTRA_DIST = \
	$(TESTS) \
	common \
	simple.pc \
	requires-test.pc \
	public-dep.pc \
	private-dep.pc \
	includedir.pc \
	missing-requires-private.pc \
	missing-requires.pc \
	idirafter.pc \
	conflicts-test.pc \
	whitespace.pc \
	fields-blank.pc \
	sub/sub1.pc \
	sub/sub2.pc \
	inst.pc \
	inst-uninstalled.pc \
	other.pc \
	requires-version-1.pc \
	requires-version-2.pc \
	requires-version-3.pc \
	non-l.pc \
	non-l-required.pc \
	circular-1.pc \
	circular-2.pc \
	circular-3.pc \
	no-variables.pc \
	sort-order-1-1.pc \
	sort/sort-order-2-1.pc \
	sort/sort/sort-order-3-1.pc \
	sort-order-1-2.pc \
	sort/sort-order-2-2.pc \
	sort/sort/sort-order-3-2.pc \
	sort-order-1-3.pc \
	sort/sort-order-2-3.pc \
	sort/sort/sort-order-3-3.pc \
	flag-dup-1.pc \
	flag-dup-2.pc \
	gtk/atk.pc \
	gtk/cairo-gobject.pc \
	gtk/cairo.pc \
	gtk/fontconfig.pc \
	gtk/freetype2.pc \
	gtk/gdk-3.0.pc \
	gtk/gdk-pixbuf-2.0.pc \
	gtk/gio-2.0.pc \
	gtk/glib-2.0.pc \
	gtk/gmodule-no-export-2.0.pc \
	gtk/gobject-2.0.pc \
	gtk/gthread-2.0.pc \
	gtk/gtk+-3.0.pc \
	gtk/kbproto.pc \
	gtk/libpng12.pc \
	gtk/libpng.pc \
	gtk/pangocairo.pc \
	gtk/pangoft2.pc \
	gtk/pango.pc \
	gtk/pixman-1.pc \
	gtk/renderproto.pc \
	gtk/x11.pc \
	gtk/xau.pc \
	gtk/xcb.pc \
	gtk/xproto.pc \
	gtk/xrender.pc \
	tilde.pc
